# atomvm_projects

./: .gitignore  CMakeLists.txt  README.md  elixir_reference_addendum.md  erlang_elixir_cheatsheet.md  erlang_vs_elixir.md  version.cmake
10_encoder_example/: README.md
10_encoder_example/src/: encoder_example.erl
8_i2c_mpu6050_example/: README.md
8_i2c_mpu6050_example/src/: mpu6050_example.app.src  mpu6050_example.erl
9_hr05_example/: README.md
9_hr05_example/src/: hr05_example.app.src  hr05_example.erl
CMakeModules/: FindSphinx.cmake  GetVersion.cmake
atomvm_image/: AtomVM-esp32-elixir-v0.7.0-alpha.1.img  AtomVM-esp32-v0.7.0-alpha.1.img  atomvm-esp32-0.5.0.img
atomvm_image/adc_nif/: atomvm-esp32-0.5.1+git.6d089f4.img  atomvm-esp32-0.6.0-dev+git.668f8ae.img
atomvm_image/adc_nif_otp25/: atomvm-esp32-0.6.0-dev+git.299fa6af.img  atomvm-esp32-0.6.0-dev+git.d9883129.img
atomvm_image/atomvm-0.5.0/: atomvm-esp32-0.5.0.img
atomvm_image/math_adc_nif/: atomvm-esp32-0.6.0-dev+git.640c7cc.img
atomvm_image/test/: atomvm-esp32-0.5.1+git.6d089f4.img
doc/: CMakeLists.txt  atomvm_quickscan.md  atomvm_wsl.md  conf.py.in
doc/src/: atomvm_build_adc_nif_image.md  atomvm_build_and_flash_from_docker.md  atomvm_build_atomvm.md  atomvm_cherry-pick_PR.md  atomvm_doc_generation.md  atomvm_docker_basic_command.md  atomvm_init_env_setup.md  atomvm_internship_init_setup.md  atomvm_overview.md  atomvm_plan_for_peripherals_checking.md  atomvm_step_by_step_deployment.md  atomvm_useful_apt_check.md  atomvm_why_erlang_in_IoT.md  atomvm_wsl.md  index.rst
docker/: Dockerfile
docker/18.04/: Dockerfile
docker/20.04/: Dockerfile
docker/22.04/: Dockerfile
docker/24.04/: Dockerfile
docker/sphinx/: Dockerfile
example/10_encoder_example/: README.md
example/11_self_balancing_robot/: README.md
example/12_remote_robot_web_server/: LICENSE  README.md  rebar.config
example/13_spi_example/: README.md
example/14_adc_example/: rebar.config
example/15_snake_game/: README.md  rebar.config
example/1_hello_world/: README.md
example/2_blinky/: README.md
note/: atomvm_build_and_flash_from_docker.md  atomvm_build_and_flash_from_docker.txt  atomvm_build_atomvm.md  atomvm_build_atomvm.txt  atomvm_docker command.txt  atomvm_docker_account.txt  atomvm_docker_and_github_account.md  atomvm_docker_basic_command.md  atomvm_env_setup_and_build_atomvm.txt  atomvm_init_env_setup.md  atomvm_init_env_setup.txt  atomvm_overview.md  atomvm_overview.txt  atomvm_plan_for_peripherals_checking.md  atomvm_plan_for_peripherals_checking.txt  atomvm_useful_apt_check.md  atomvm_why_erlang_in_IoT.md  atomvm_why_erlang_in_IoT.txt
(+272 files in other folders)
